# CS1C-Class-Project

./: .gitignore  .gitmodules  CMakeLists.txt  Deliverables.txt  Doxyfile  Makefile  README.md  crow-guide.txt  main.cpp  vector.h
.devcontainer/: Dockerfile  devcontainer.json
Autodia-2.14/: MYMETA.json  MYMETA.yml  Makefile
database/: readme.txt  render_area.json  shapes.json  test_render_area.json  test_shapes.json  testimonials.json  users.json
docs/: Deliverables.txt  Doxyfile  uml-locations.txt
docs/uml/: uml use case 01 - shape report.docx  uml use case 02 - creating testimonial.docx
documentation/: Doxyfile  testimonials.dia
documentation/html/: annotated.html  dir_000000_000001.html  dir_000000_000002.html  dir_000001_000002.html  dir_3f615ade772d23cefe5e20dcb18424a2.html  dir_3f615ade772d23cefe5e20dcb18424a2.js  dir_3f615ade772d23cefe5e20dcb18424a2_dep.map  dir_3f615ade772d23cefe5e20dcb18424a2_dep.md5  dir_5eb623c401d973780b122ccc004c6823.html  dir_5eb623c401d973780b122ccc004c6823.js  dir_5eb623c401d973780b122ccc004c6823_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7da8eed525127ac5057a5e270c5fbd3f.html  dir_7da8eed525127ac5057a5e270c5fbd3f.js  dir_8509b06bafa958d2011203a730bf5778.html  dir_8509b06bafa958d2011203a730bf5778.js  dir_8509b06bafa958d2011203a730bf5778_dep.map  dir_a7fa5847c07dc92c5227f8a150238560.html  dir_a7fa5847c07dc92c5227f8a150238560.js  dir_a7fa5847c07dc92c5227f8a150238560_dep.map  doxygen_crawl.html  files.html  functions_c.html  functions_d.html  functions_e.html  functions_func.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_j.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  functions_func_v.html  functions_func_~.html  functions_j.html  functions_m.html  functions_o.html  functions_p.html  (+37 more)
documentation/latex/: annotated.tex  dir_3f615ade772d23cefe5e20dcb18424a2.tex  dir_5eb623c401d973780b122ccc004c6823.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7da8eed525127ac5057a5e270c5fbd3f.tex  dir_8509b06bafa958d2011203a730bf5778.tex  dir_a7fa5847c07dc92c5227f8a150238560.tex  dir_a7fa5847c07dc92c5227f8a150238560_dep.md5  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.toc
documentation/uml/: ShapeReport.dia  ShapeReport.dia~  Statemachine_userlogin.dia  Statemachine_userlogin.dia~  edit_shape.dia  edit_shape.dia~  testimonials.dia~  uml use case 03 - editing shapes.docx
inheritance-setup/: CMakeLists.txt  CMakeLists.txt.user.3e4984d  CMakeLists.txt.user.971ce3d  RenderArea.cpp  circle.cpp  circle.h  ellipse.cpp  ellipse.h  line.cpp  line.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygon.cpp  polygon.h  polyline.cpp  polyline.h  rectangle.cpp  rectangle.h  renderarea.cpp  renderarea.h  shape.cpp  shape.cpp.autosave  shape.h  shape.h.autosave  square.cpp  square.h  text.cpp  text.h
project-details/: crow-guide.txt  git_basics.txt
project-details/userstories/: 1 - User Story 4 Draft.txt  2 - User Story 15 Draft.txt  3 - User Story 11 Draft.txt  3 - User Story 3 Draft.txt  5 - User Story 13 Draft.txt  5 - User Story 5 Draft.txt  6 - User Story 7 Draft.txt  6 - User Story 8 Draft.txt  6 - User Story 9 Draft.txt  7 - User Story 10 Draft.txt  8 -  User Story 1 Draft.txt  8 - User Story 2 Draft.txt
project-submissions/: deliverables.txt
qt-backend/: MyApp  moc_ApiClient.cpp  readme.txt
qt-client/: ApiClient.cpp  ApiClient.h  ApiHandler.h  Makefile  MyApp  api_client.cpp  api_client.h  main.cpp  mainTemp.cpp  moc_ApiClient.cpp  moc_ApiHandler.cpp
src/backend/: ApiClient.cpp  ApiClient.h  ApiHandler.cpp  AppDriver.cpp  AppDriver.h  Makefile  Parser.cpp  Parser.h  RenderAreaManager.cpp  RenderAreaManager.h  ShapesManager.cpp  ShapesManager.h  Testimonial.cpp  Testimonial.h  TestimonialManager.cpp  TestimonialManager.h  UserAccount.cpp  UserAccount.h  UserManager.cpp  UserManager.h  main.cpp  moc_ApiClient.cpp  moc_UserManager.cpp
src/frontend/: ColumnEditDelegate.h  Geoo.qss  Medize.qss  TestimonialDialog.cpp  TestimonialDialog.h  TestimonialsDisplayDialog.cpp  TestimonialsDisplayDialog.h  darkstyle.qss  lightstyle.qss  loginwindow.cpp  loginwindow.h  loginwindow.h.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderarea.cpp  renderarea.h  resources.qrc  shapecontroller.h
src/objects/: Converter.h  circle.cpp  circle.h  ellipse.cpp  ellipse.h  line.cpp  line.h  polygon.cpp  polygon.h  polyline.cpp  polyline.h  rectangle.cpp  rectangle.h  renderarea.cpp  renderarea.h  shape.cpp  shape.h  square.cpp  square.h  (+3 more)
userstories/: 0 - Agile User Story Template.txt  1 - User Story 11 Draft.txt  1 - User Story 3 Draft.txt  10 - User Story 10 Draft.txt  11 - User Story 1 Draft.txt  11 - User Story 2 Draft.txt  2 - User Story 12 Draft.txt  2 - User Story 15 Draft.txt  2 - User Story 4 Draft.txt  3 - User Story 3 Draft.txt  4 - User Story 6 Draft.txt  4 - User Story 7 Draft.txt  5 - User Story 13 Draft.txt  5 - User Story 5 Draft.txt  6 - User Story 14 Draft.txt  6 - User Story 7 Draft.txt  6 - User Story 8 Draft.txt  6 - User Story 9 Draft.txt  7 - User Story 10 Draft.txt  8 -  User Story 1 Draft.txt  8 - User Story 2 Draft.txt  Agile User Story Template.txt  Story 3.txt  User Story 1 Draft.txt  User Story 10 Draft.txt  User Story 2 Draft.txt  User Story 3 Draft.txt  User Story 4 Draft.txt  User Story 6 Draft.txt  User Story 8 Draft.txt  User Story 9 Draft.txt  User Story Draft #5  User story 4 Draft.txt
vector/: vector.cpp  vector.h
vector-driver/: Makefile  main.cpp  valgrind_vector-driver.rpt  vector-driver  vector-driver.scr  vector-driver.tar  vector-driver_clean.scr
webservice/: Makefile  main.cpp  readme.txt  webservice.cpp
webservice-dockerized/: Dockerfile  Makefile  README.md  main.cpp  readme.txt
whitebox-testing/: Makefile  Parser.cpp  Parser.h  README.md  RenderAreaManager.cpp  RenderAreaManager.h  SelSort.cpp  hwgp02.scr  hwgp02.tar  hwgp02IO.txt  hwgp02_clean.scr  main.cpp  moc_ApiClient.cpp  moc_RenderAreaManager.cpp
(+2366 files in other folders)
